--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,7 +51,7 @@ jobs:
         IAM_ROLE_NAME: ${{ secrets.IAM_ROLE_NAME }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
-        pip install --no-cache-dir --upgrade awscli pandas boto3 sagemaker requests fsspec sefs tabulate
+        pip install --no-cache-dir --upgrade awscli pandas boto3 sagemaker requests fsspec s3fs tabulate
         python src/training-job.py
         cat details.txt >> report.md
         cml-send-comment report.md
