--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,7 +52,7 @@ jobs:
         REPO_NAME: ${{ secrets.REPO_NAME }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
-        pip install --no-cache-dir --upgrade awscli pandas boto3 sagemaker requests fsspec s3fs tabulate
+        pip install --no-cache-dir --upgrade awscli pandas boto3 sagemaker requests fsspec s3fs tabulate  scikit-learn joblib flask
         python src/training-script.py
         python src/training-job.py
         cat details.txt >> report.md
