--- a/.github/workflows/test_chatops.yml
+++ b/.github/workflows/test_chatops.yml
@@ -53,9 +53,20 @@ jobs:
 
           # This step is a toy example that illustrates how you can use outputs from the pr-command action
         - name: print variables
-          if: steps.prcomm.outputs.BOOL_TRIGGERED == 'true'
+          if: steps.prcoprcommgmm2.outputs.BOOL_TRIGGERED == 'true'
           run: echo "${USERNAME} made a triggering comment on PR# ${PR_NUMBER} for ${BRANCH_NAME}"
           env: 
-            BRANCH_NAME: ${{ steps.prcomm.outputs.BRANCH_NAME }}
-            PR_NUMBER: ${{ steps.prcomm.outputs.PULL_REQUEST_NUMBER }}
-            USERNAME: ${{ steps.prcomm.outputs.COMMENTER_USERNAME }}
+            BRANCH_NAME: ${{ steps.prcommg.outputs.BRANCH_NAME }}
+            PR_NUMBER: ${{ steps.prcommg.outputs.PULL_REQUEST_NUMBER }}
+            USERNAME: ${{ steps.prcommg.outputs.COMMENTER_USERNAME }}
+
+  notify-pr:
+      name: notify Notification
+      runs-on: ubuntu-latest
+      needs: [label-pr2]
+      steps:
+        - name: notify Notification
+          uses: github-actions-up-and-running/pr-comment@v1.0.0
+          with:
+            repo-token: ${{ secrets.GITHUB_TOKEN }}
+            message: Nice PR!👍
