--- a/.github/workflows/test_chatops.yml
+++ b/.github/workflows/test_chatops.yml
@@ -64,6 +64,8 @@ jobs:
       name: notify Notification
       runs-on: ubuntu-latest
       needs: [label-pr2]
+      permissions:
+        pull-requests: write
       steps:
         - name: notify Notification
           uses: github-actions-up-and-running/pr-comment@v1.0.1
