--- a/.github/workflows/test_chatops.yml
+++ b/.github/workflows/test_chatops.yml
@@ -53,7 +53,7 @@ jobs:
 
           # This step is a toy example that illustrates how you can use outputs from the pr-command action
         - name: print variables
-          if: steps.prcoprcommgmm2.outputs.BOOL_TRIGGERED == 'true'
+          if: steps.prcommg.outputs.BOOL_TRIGGERED == 'true'
           run: echo "${USERNAME} made a triggering comment on PR# ${PR_NUMBER} for ${BRANCH_NAME}"
           env: 
             BRANCH_NAME: ${{ steps.prcommg.outputs.BRANCH_NAME }}
