--- a/.github/workflows/test_chatops.yml
+++ b/.github/workflows/test_chatops.yml
@@ -67,8 +67,9 @@ jobs:
       permissions:
         pull-requests: write
       steps:
-        - name: notify Notification
-          uses: github-actions-up-and-running/pr-comment@v1.0.1
-          with:
-            repo-token: ${{ secrets.GITHUB_TOKEN }}
-            message: Nice PR!👍
+          - name: Comment PR
+            uses: thollander/actions-comment-pull-request@v1
+            with:
+              message: 'Example of message !'
+              pr_number: ${{ steps.prcommg.outputs.PULL_REQUEST_NUMBER }} # This will comment on pull request #123
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
